# AIGCT_dev

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
agct/: analyzer.py  container.py  exporter.py  init_app.py  install_util.py  model.py  pd_util.py  plot_util.py  plotter.py  query.py  repo_qc.py  reporter.py  repository.py  util.py
agct/etl/: container.py  repo_loader.py
agct/migrations/migration_20241202/: migration.py
aigct/: analyzer.py  check_install.py  container.py  init_app.py  install_db.py  install_util.py  query.py  reporter.py  repository.py
aigct/config/: aigct.yaml.sample
aigct/etl/: container.py  repo_loader.py
aigct/migrations/migration_20241202/: context.py  migration.py
conf1/: agct.yaml  aigct.yaml
config/: agct.yaml.sample  aigct.yaml  config.yaml
data/: variant.csv
data/CANCER/: variant_effect_label.csv
data/cancer/: variant_effect_score.csv
data1/data/: variant.csv  variant_task.csv
data1/data/CANCER/: variant_filter_variant.csv
demo/: demo1.ipynb  test_vep.csv
demo/.ipynb_checkpoints/: demo1-checkpoint.ipynb  test-checkpoint.py
docs/: .index.rst.swp  agct.etl.rst  agct.rst  analysis_guide.rst  conf.py  install.rst  intro.rst  modules.rst  support.rst
docs/_build/doctrees/: agct.doctree  agct.etl.doctree  analysis_guide.doctree  data_dictionary.doctree  environment.pickle  index.doctree  install.doctree  intro.doctree  modules.doctree  query_guide.doctree  support.doctree  user_guide.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/html/: .buildinfo  agct.etl.html  agct.html  analysis_guide.html  data_dictionary.html  genindex.html  index.html  install.html  intro.html  modules.html  objects.inv  py-modindex.html  query_guide.html  search.html  searchindex.js  support.html  user_guide.html
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: data_dictionary.rst.txt  index.rst.txt  (+5 more)
tests/: conftest.py  test.py  test_analyzer.py  test_exporter.py  test_plotter.py  test_query.py  test_repo_qc.py  test_reporter.py
(+110 files in other folders)
